--- a/CommTracMobile/CommTracMobile.UWP/project.json
+++ b/CommTracMobile/CommTracMobile.UWP/project.json
@@ -1,10 +1,15 @@
 ﻿{
   "dependencies": {
+    "DryIoc.dll": "2.12.5",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Prism.Core": "6.3.0",
+    "Prism.DryIoc.Forms": "6.3.0.1",
+    "Prism.Forms": "6.3.0",
+    "Xam.Plugins.Settings": "3.1.1",
     "Xamarin.Forms": "2.4.0.280"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10586": {}
   },
   "runtimes": {
     "win10-arm": {},
